k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariners-dashboard
spec:
  selector:
    app: mariners-dashboard
  ports:
  - port: 80
    targetPort: 3000
